implementado comportamento correto no componente de Plans e criado o serviço para pegar o email do usuário.

--- a/package.json
+++ b/package.json
@@ -20,9 +20,11 @@
     "@radix-ui/react-select": "^2.0.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-toast": "^1.1.5",
+    "@stripe/stripe-js": "^3.0.5",
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
+    "dotenv": "^16.4.5",
     "formik": "^2.4.5",
     "hamburger-react": "^2.5.0",
     "i18next": "^23.7.16",
